# data_analysis_deep_agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  llm_provider.py  pyproject.toml  requirements.txt  ruff.toml  run_worker.py  start_server.py  test_agent_sandbox.py  test_async_conn.py  test_modal_sandbox.py
.github/workflows/: ci.yml
app/: main.py
app/core/: dependencies.py  modal_app.py  queue.py
app/routes/: analysis.py
app/schemas/: analysis.py
app/services/: analysis_service.py
app/utils/: db.py
evaluation/: eval_efficiency.py  trace_summary.py
evaluation/test_samples/: test_sales.csv
static/: index.html
tests/: test_config.py
